--- a/hr_payroll_report/views/hr_payslip_line_view.xml
+++ b/hr_payroll_report/views/hr_payslip_line_view.xml
@@ -25,7 +25,7 @@
             <field name="arch" type="xml">
                 <xpath expr="//field[@name='slip_id']" position="after">
                     <filter string="Este mes" name="este_mes" domain="[('date_from','&gt;=', datetime.date.today().replace(day=1).strftime('%Y-%m-%d')),('date_to','&lt;', datetime.date.today().replace(month=datetime.date.today().month+1,day=1).strftime('%Y-%m-%d'))]"/>
-                    <filter string="Mes anterior" name="mes_anterior" domain="[('date_from','&gt;',datetime.date.today().replace(month=datetime.date.today().month-1,day=1).strftime('%Y-%m-%d')),('date_to','&lt;',datetime.date.today().replace(month=datetime.date.today().month,day=1).strftime('%Y-%m-%d'))]"/>
+                    <filter string="Mes anterior" name="mes_anterior" domain="[('date_from','&gt;=',datetime.date.today().replace(month=datetime.date.today().month-1,day=1).strftime('%Y-%m-%d')),('date_to','&lt;',datetime.date.today().replace(month=datetime.date.today().month,day=1).strftime('%Y-%m-%d'))]"/>
                 </xpath>
             </field>
         </record>
